--- a/h5/index.html
+++ b/h5/index.html
@@ -2,28 +2,69 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>electron</title>
+    <title>private chating room</title>
+    <script src="./flexible.js"></script>
   </head>
+  <link rel="stylesheet" href="./reset.css">
   <style>
     .list-wrapper{
-      width: 80%;
-      height: 300px;
+      font-size: 0.42rem;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 3rem;
+    }
+    .list-wrapper ul{
+      width: 100%;
+      padding: 0.1rem;
+      box-sizing: border-box;
+    }
+    .list-wrapper li{
+      margin: 0.1rem 0;
+      background: #f0f0f0;
+      color: #333;
+    }
+    .list-wrapper strong{
+      font-size: 0.42rem;
+      color: #333;
     }
     .chatting-list{
       width: 80%;
-      height: 60px;
+      height: 0.6rem;
     }
     .user-input{
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      height: 0.6rem;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
     }
-    .user-input > input{
-      width: 300px;
-      height: 60px;
+    #nickname{
+      font-size: 0.3rem;
+      width: 1.4rem;
+      height: 0.6rem;
+      line-height: 0.6rem;
     }
-    .user-input > button{
-      width: 300px;
-      height: 60px;
+    #content{
+      font-size: 0.3rem;
+      width: 4rem;
+      height: 0.6rem;
+      line-height: 0.6rem;
     }
-    
+    #submit{
+      width: 2rem;
+      height: 0.6rem;
+      font-size: 0.36rem;
+      line-height: 0.6rem;
+    }
+    h1{
+      margin: 0.3rem;
+      font-size: 0.42rem;
+      font-weight: bold;
+      text-align: center;
+    }
   </style>
   <body>
     <h1>private chating room</h1>
@@ -31,15 +72,24 @@
       <ul id="list" class="chatting-list"></ul>
     </div>
     <div class="user-input">
-      <input id="content" type="text"><button id="submit">submit</button>
+      <input type="text" id="nickname" placeholder="输入昵称" value="" /><input id="content" type="text" placeholder="输入需要提交的内容"><button id="submit">提交内容</button>
     </div>
+    <!-- <p>Node <script>document.write(process.versions.node)</script></p>
+    <p>Chrome <script>document.write(process.versions.chrome)</script></p>
+    <p>Electron <script>document.write(process.versions.electron)</script></p> -->
   </body>
 <script>
 (function(undefined) {
   // dom
+  const nickname = document.getElementById('nickname');
   const content = document.getElementById('content');
   const submit = document.getElementById('submit');
   const list = document.getElementById('list');
+
+  // uid
+  const uid = Math.random().toString(16).slice(2) + new Date().getTime()
+  let username = '';
+  let defaultUsername = '连接者' + new Date().getTime();
 
   // socket
   const socket = new WebSocket('ws://10.0.0.254:8080');
@@ -60,21 +110,27 @@
       console.log(e);
       let data = JSON.parse(e.data);
       let li = document.createElement('li');
-      li.innerHTML = `<strong>${data.uid}</strong>: ${data.msg}`;
+      li.innerHTML = `<strong>${data.uid === uid ? '我' : data.username}</strong>: ${data.msg}`;
       list.appendChild(li);
   }
 
   // event
-  submit.addEventListener('click', () => {
+  content.onkeydown = submit.onclick = (e) => {
+    if(e.target.id === 'content' && e.keyCode !== 13) return;
     let msg = content.value.trim();
     if(msg.toString().length > 0) {
       let data = JSON.stringify({
-        uid: 'failte',
+        uid,
+        username: username !== '' ? username : defaultUsername,
         msg
       })
       send(data);
+      content.value = '';
     }
-  })
+  }
+  nickname.onchange = () => {
+    username = nickname.value.toString().trim();
+  }
 })()
 </script>
 </html>
